maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:13: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  for (i<-0 to xmax-1){
        ^